--- a/src/views/pages/home.mustache
+++ b/src/views/pages/home.mustache
@@ -7,6 +7,16 @@ Opa {{name}} {{lastName}}, tudo bem?
 {{^showOld}}
     Beleza?
 {{/showOld}}
+<hr/>
+
+<fieldset>
+    <legend>Novo Usuário</legend>
+    <form method="Post" action="/novousuario">
+        <input type="text" name="name" placeholder="Digite um nome"/><br/><br/>
+        <input type="text" name="age" placeholder="Digite uma idade"/><br/><br/>
+        <input type="submit" value="Inserir Usuário"/>
+    <form>    
+</fieldset>
 
 <hr/>
 <h2>Usuários do banco</h2>
