--- a/src/views/pages/home.mustache
+++ b/src/views/pages/home.mustache
@@ -23,7 +23,7 @@ Opa {{name}} {{lastName}}, tudo bem?
 <ul>
     {{#users}}
     <li>
-   
+    {{name}} (Primeira letra: {{firstLetterOfName}})
         - Idade: {{age}} 
         - <a href="/usuario/{{id}}/mais">+</a> 
         - <a href="/usuario/{{id}}/menos">-</a> 
